feat: export report api by taskid 775